# agentic-app-template

./: .gitignore
apps/python-api/: pyproject.toml
apps/rust-api/: AGENTS.md  Cargo.toml
apps/rust-api/src/: errors.rs  main.rs
apps/rust-api/src/handlers/: health.rs  mod.rs  users.rs
apps/rust-api/src/models/: mod.rs  response.rs  user.rs
apps/rust-api/src/routes/: mod.rs
apps/web/: package-lock.json  package.json
