[project]
name = "python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.60.0",
    "crewai>=0.152.0",
    "crewai-tools>=0.0.1",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "instructor>=1.10.0",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-openai>=0.3.28",
    "langgraph>=0.6.2",
    "langsmith>=0.4.10",
    "mcp>=1.12.3",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=6.2.0",
    "uvicorn[standard]>=0.35.0",
]
